Polish favicon and prevent slideout scrollbar flash

--- a/src/style.css
+++ b/src/style.css
@@ -1238,6 +1238,7 @@ kbd {
   max-width: none;
   height: 100%;
   max-height: none;
+  overflow: hidden;
   padding: 0;
   border: 0;
   color: var(--text);
